[gd_scene load_steps=34 format=3]

[ext_resource type="Script" path="res://scripts/traps/seashell.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/traps/projectiles/pearl.tscn" id="2"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Idle/1.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Opening/1.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Opening/2.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Opening/3.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Opening/4.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Opening/5.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Fire/1.png" id="9"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Fire/2.png" id="10"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Fire/3.png" id="11"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Fire/4.png" id="12"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Fire/5.png" id="13"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Fire/6.png" id="14"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Bite/1.png" id="15"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Bite/2.png" id="16"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Bite/3.png" id="17"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Bite/4.png" id="18"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Bite/5.png" id="19"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Bite/6.png" id="20"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Hit/1.png" id="21"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Hit/2.png" id="22"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Hit/3.png" id="23"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Hit/4.png" id="24"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Destroyed/1.png" id="25"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Destroyed/2.png" id="26"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Destroyed/3.png" id="27"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Destroyed/4.png" id="28"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Seashell/Seashell Destroyed/5.png" id="29"]

[sub_resource type="SpriteFrames" id="SpriteFrames_seashell"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("3")}] , "loop": true, "name": &"idle", "speed": 4.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("4")}, {"duration": 1.0, "texture": ExtResource("5")}, {"duration": 1.0, "texture": ExtResource("6")}, {"duration": 1.0, "texture": ExtResource("7")}, {"duration": 1.0, "texture": ExtResource("8")}], "loop": false, "name": &"opening", "speed": 8.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("9")}], "loop": true, "name": &"ready", "speed": 2.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("9")}, {"duration": 1.0, "texture": ExtResource("10")}, {"duration": 1.0, "texture": ExtResource("11")}, {"duration": 1.0, "texture": ExtResource("12")}, {"duration": 1.0, "texture": ExtResource("13")}, {"duration": 1.0, "texture": ExtResource("14")}], "loop": false, "name": &"fire", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("15")}, {"duration": 1.0, "texture": ExtResource("16")}, {"duration": 1.0, "texture": ExtResource("17")}, {"duration": 1.0, "texture": ExtResource("18")}, {"duration": 1.0, "texture": ExtResource("19")}, {"duration": 1.0, "texture": ExtResource("20")}], "loop": false, "name": &"bite", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("21")}, {"duration": 1.0, "texture": ExtResource("22")}, {"duration": 1.0, "texture": ExtResource("23")}, {"duration": 1.0, "texture": ExtResource("24")}], "loop": false, "name": &"hit", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("25")}, {"duration": 1.0, "texture": ExtResource("26")}, {"duration": 1.0, "texture": ExtResource("27")}, {"duration": 1.0, "texture": ExtResource("28")}, {"duration": 1.0, "texture": ExtResource("29")}], "loop": false, "name": &"death", "speed": 10.0}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
extents = Vector2(24, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_damage"]
extents = Vector2(26, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 120.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bite"]
extents = Vector2(26, 18)

[node name="Seashell" type="StaticBody2D" groups=["trap"]]
script = ExtResource("1")
projectile_scene = ExtResource("2")
collision_layer = 1
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_seashell")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_body")

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(26, -20)

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 1
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_damage")

[node name="BiteArea" type="Area2D" parent="."]
position = Vector2(28, -14)
collision_layer = 0
collision_mask = 1
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteArea"]
shape = SubResource("RectangleShape2D_bite")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.25
one_shot = false

[node name="BiteCooldown" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
